--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "handlebars": "^4.7.8",
     "joi": "^18.0.1",
     "joi-to-swagger": "^6.2.0",
     "mongoose": "^8.18.1",
+    "resend": "^6.0.3",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^13.0.0"
   }
