Implement JWT authentication and token verification
- Add JWT_SECRET and REFRESH_TOKEN_SECRET in environment configuration
- Create jwt.js utility for signing and verifying tokens
- Update auth.service.js to handle token generation and verification
- Update auth.controller.js to issue and validate JWT tokens
- Add auth.middleware.js to protect routes by verifying JWT tokens

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "ragdb-be",
   "version": "1.0.0",
   "description": "",
@@ -26,6 +27,7 @@
     "handlebars": "^4.7.8",
     "joi": "^18.0.1",
     "joi-to-swagger": "^6.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
     "resend": "^6.0.3",
     "swagger-ui-express": "^5.0.1",
