add scope in payload jwt

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ ADMIN_PASSWORD=
 ADMIN_EMAIL=
 FROM= 'RagDB <noreply@techleaf.pro>'
 OTP_EXPIRE_MINUTES=5
+JWT_SECRET=
+REFRESH_TOKEN_SECRET=
+JWT_EXPIRES_IN=
+REFRESH_TOKEN_EXPIRES_IN=
