--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,10 @@ PORT=8080
 RESEND_API_KEY=
 ADMIN_PASSWORD=
 ADMIN_EMAIL=
-FROM= 'RagDB <noreply@techleaf.pro>'
 OTP_EXPIRE_MINUTES=5
 JWT_SECRET=
 REFRESH_TOKEN_SECRET=
 JWT_EXPIRES_IN=
 REFRESH_TOKEN_EXPIRES_IN=
+MAIL_PASS=
+MAIL_USER=
