--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
     "mongoose": "^8.18.1",
     "nodemailer": "^7.0.6",
     "swagger-ui-express": "^5.0.1",
-    "uuid": "^13.0.0"
+    "ua-parser-js": "^2.0.5"
   }
 }
