--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "fs": "^0.0.1-security",
     "fs-extra": "^11.3.1",
     "handlebars": "^4.7.8",
     "joi": "^18.0.1",
     "joi-to-swagger": "^6.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "swagger-ui-express": "^5.0.1",
     "ua-parser-js": "^2.0.5"
