--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
     "ua-parser-js": "^2.0.5"
   }
