--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,10 @@ JWT_EXPIRES_IN=
 REFRESH_TOKEN_EXPIRES_IN=
 MAIL_PASS=
 MAIL_USER=
+CORS_ORIGIN=
+# If empty => allow all (*)
+# If set => allow only that domain or multiple domains (comma separated)
+#
+# Examples:
+#   CORS_ORIGIN=https://example.com
+#   CORS_ORIGIN=https://example.com,https://staging.example.com,http://localhost:3000
